Gtk3: Fix button outline sizing on different GTK minor versions

BUG=701737
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2765883003
Cr-Commit-Position: refs/heads/master@{#458591}

Former-commit-id: 8aa048d906db40cb8067e6e2d9393aca52f582d0